# 3DEngineOpenGL

./: .gitignore  CMakeLists.txt  CommonMacros.txt  README.md  bootstrap.py
Core/: CMakeLists.txt
Core/OpenGL/: GLApp.cpp  GLApp.h  GLBuffer.cpp  GLBuffer.h  GLCanvas.cpp  GLCanvas.h  GLFramebuffer.cpp  GLFramebuffer.h  GLImGui.cpp  GLImGui.h  GLMesh.cpp  GLMesh.h  GLMeshPVP.cpp  GLMeshPVP.h  GLProgram.cpp  GLProgram.h  GLSceneData.cpp  GLSceneData.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
Core/Util/: Bitmap.cpp  Bitmap.h  Camera.cpp  Camera.h  Debug.h  GpuMath.h  Material.cpp  Material.h  Scene.cpp  Scene.h  Utils.cpp  Utils.h  UtilsCubemap.cpp  UtilsMath.h  VtxData.cpp  VtxData.h  stbImageWrapper.cpp
Samples/01HelloWorld/: CMakeLists.txt  README.md
Samples/02HelloTriangle/: CMakeLists.txt
Samples/02HelloTriangle/src/: Main.cpp
Samples/03Cube/: CMakeLists.txt  README.md
Samples/03Cube/src/: Main.cpp
Samples/03CubeOptimized/: CMakeLists.txt  README.md
Samples/03CubeOptimized/src/: Main.cpp
Samples/04TextureMapping/: CMakeLists.txt  README.md
Samples/04TextureMapping/src/: Main.cpp
Samples/05ImGui/: CMakeLists.txt  README.md
Samples/05ImGui/src/: ImguiWrapper.cpp  Main.cpp
Samples/06Duck/: CMakeLists.txt  README.md
Samples/06Duck/src/: Main.cpp
Samples/07VertexPulling/: CMakeLists.txt  README.md
Samples/07VertexPulling/src/: Main.cpp
Samples/08VertexIndexPulling/: CMakeLists.txt  README.md
Samples/08VertexIndexPulling/src/: Main.cpp
Samples/09CubeMap/: CMakeLists.txt  README.md
Samples/09CubeMap/src/: Main.cpp
Samples/10MeshOpt/: CMakeLists.txt  README.md
Samples/10MeshOpt/src/: Main.cpp
Samples/11DebugGrid/: CMakeLists.txt  README.md
Samples/11DebugGrid/src/: Main.cpp
Samples/12MeshRenderer/: CMakeLists.txt  README.md
Samples/12MeshRenderer/src/: Main.cpp
Samples/13Tessellation/: CMakeLists.txt  README.md
Samples/13Tessellation/src/: Main.cpp
Samples/14PBR/: CMakeLists.txt  README.md
Samples/14PBR/src/: Main.cpp
Samples/15LargeScene/: CMakeLists.txt  README.md
Samples/15LargeScene/src/: Main.cpp
Samples/16ShadowMapping/: CMakeLists.txt  README.md
Samples/16ShadowMapping/src/: Main.cpp
Samples/17SSAO/: CMakeLists.txt  README.md
Samples/17SSAO/src/: Main.cpp
Samples/18HDR/: CMakeLists.txt  README.md
Samples/18HDR/src/: Main.cpp
Samples/GLFW/: CMakeLists.txt
Samples/HelloWorld/: CMakeLists.txt
Tools/MeshConversionTool/: CMakeLists.txt  README.md
Tools/MeshConversionTool/src/: Main.cpp
Tools/SceneConversionTool/: CMakeLists.txt  README.md
Tools/SceneConversionTool/src/: Main.cpp
data/: sceneconverter.json
data/free_zuk_3d_model/: scene.gltf
data/shaders/: fullScreenQuad.vert  fullScreenQuadOpt.vert  lines.frag  lines.vert
data/shaders/07VertexPulling/: 07.frag  07.geom  07.vert
data/shaders/08VertexIndexPulling/: 08.vert
data/shaders/09CubeMap/: 08Cube.frag  08Cube.vert  08Duck.frag  08Duck.vert  GLBufferDecl.glsl  GLBufferDecl.h
data/shaders/11DebugGrid/: GLBufferDecl.glsl  GridCalculation.glsl  GridParameters.glsl  grid.frag  grid.vert
data/shaders/12MeshRenderer/: mesh.frag  mesh.geom  mesh.vert
data/shaders/13Tessellation/: GLDecl.glsl  duck.frag  duck.geom  duck.tesc  duck.tese  duck.vert  grid.frag  grid.vert
data/shaders/14PBR/: PBR.frag  PBR.vert
data/shaders/15LargeScene/: PBR.glsl  alphaTest.glsl  largeScene.frag  largeScene.vert  material.glsl
data/shaders/16ShadowMapping/: GLBufferDeclarations.glsl  scene.frag  scene.vert  shadow.frag  shadow.vert
data/shaders/17SSAO/: BlurX.frag  BlurY.frag  SSAO.frag  SSAO_combine.frag
data/shaders/18HDR/: BrightPass.frag  HDR.frag  ToLuminance.frag
images/: cubemap_verticalcross.hdr
